# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220225082754_make_status_not_null_in_subscriptions.sql  20220316010639_rename_password_column.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
