[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features= ["derive"] }
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
config = "0.12.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-subscriber = { version = "0.3.8", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
once_cell = "1.9.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.0-rc.3"
serde-aux = "3.0.1"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.14.0"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
linkify = "0.8.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.30"
anyhow = "1.0.55"
base64 = "0.13.0"
argon2 = { version = "0.4.0", features = ["std"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
   "runtime-actix-rustls",
   "macros",
   "postgres",
   "uuid",
   "chrono",
   "migrate",
   "offline"
]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.10"
serde_json = "1"
